# oddjobs

./: .dockerignore  .feature-id  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  idea-custom-decisions.md  quench.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: credential.rs  lib.rs  notify.rs  subprocess.rs  subprocess_tests.rs  traced.rs  traced_tests.rs
crates/adapters/src/agent/: claude.rs  claude_tests.rs  fake.rs  fake_tests.rs  log_entry.rs  log_entry_tests.rs  mod.rs  mod_tests.rs  remote.rs  router.rs  watcher.rs  watcher_tests.rs
crates/adapters/src/agent/coop/: adapter.rs  adapter_tests.rs  http.rs  spawn.rs  spawn_tests.rs  ws.rs
crates/adapters/src/agent/docker/: http.rs  mod.rs  ws.rs
crates/adapters/src/notify/: fake.rs  noop.rs  noop_tests.rs
crates/adapters/src/session/: fake.rs  fake_tests.rs  mod.rs  noop.rs  noop_tests.rs  tmux.rs  tmux_tests.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: client.rs  client_lifecycle.rs  client_queries.rs  client_queries_agent.rs  client_queries_job.rs  client_queries_queue.rs  client_queries_worker.rs  client_tests.rs  color.rs  color_tests.rs  daemon_process.rs  daemon_process_tests.rs  env.rs  exit_error.rs  help.rs  help_tests.rs  main.rs  main_tests.rs  output.rs  output_tests.rs  table.rs  table_tests.rs
crates/cli/src/commands/: agent.rs  agent_tests.rs  cron.rs  daemon.rs  daemon_tests.rs  decision.rs  decision_tests.rs  emit.rs  emit_tests.rs  job.rs  job_display.rs  job_tests.rs  job_wait.rs  mod.rs  pipeline.rs  pipeline_tests.rs  project.rs  queue.rs  queue_tests.rs  resolve.rs  resolve_tests.rs  run.rs  run_tests.rs  runbook.rs  runbook_tests.rs  session.rs  session_tests.rs  status.rs  status_tests.rs  worker.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: action_tracker.rs  actions.rs  actions_tests.rs  agent.rs  agent_record.rs  agent_record_tests.rs  agent_run.rs  agent_run_tests.rs  agent_tests.rs  breadcrumb.rs  clock.rs  clock_tests.rs  container.rs  crew.rs  crew_tests.rs  decision.rs  decision_tests.rs  effect.rs  effect_tests.rs  event.rs  event_tests.rs  id.rs  id_tests.rs  job.rs  job_tests.rs  lib.rs  log_paths_tests.rs  macros.rs  metrics.rs  namespace.rs  namespace_tests.rs  owner.rs  owner_test.rs  pipeline.rs  pipeline_tests.rs  project.rs  project_tests.rs  records.rs  session.rs  session_tests.rs  (+8 more)
crates/core/src/event/: agent.rs  agent_run.rs  core_types.rs  cron_scheduler.rs  decision.rs  dispatch.rs  job.rs  logging_tests.rs  method_tests.rs  methods.rs  mod.rs  step.rs  worker_queue.rs  workspace.rs
crates/core/src/event_tests/: log_summary_ext.rs  serialization.rs  serialization_ext.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: env.rs  event_bus.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  listener_tests.rs  main.rs  main_tests.rs  protocol.rs  protocol_query.rs  protocol_status.rs  protocol_tests.rs  protocol_types.rs
crates/daemon/src/adapters/: credential_tests.rs  mod.rs  notify.rs  notify_fake.rs  notify_tests.rs  subprocess.rs  workspace.rs
crates/daemon/src/engine/: activity_logger.rs  activity_logger_tests.rs  agent_logger.rs  agent_logger_tests.rs  agent_setup.rs  breadcrumb.rs  decision.rs  decision_builder.rs  decision_tests.rs  error.rs  executor.rs  lifecycle.rs  mod.rs  monitor.rs  monitor_tests.rs  scheduler.rs  scheduler_tests.rs  spawn.rs  spawn_tests.rs  steps.rs  steps_tests.rs  test_helpers.rs  time_fmt.rs  usage_metrics.rs  usage_metrics_tests.rs  vars.rs  workspace.rs
crates/daemon/src/lifecycle/: mod.rs  mod_tests.rs  reconcile.rs  reconcile_tests.rs  startup.rs  startup_tests.rs  test_helpers.rs
crates/daemon/src/lifecycle_tests/: mod.rs  reconciliation.rs  startup_shutdown.rs
crates/daemon/src/listener/: attach.rs  commands.rs  commands_tests.rs  coop.rs  crons.rs  crons_tests.rs  decisions.rs  decisions_tests.rs  lifecycle.rs  mod.rs  mutations.rs  mutations_tests.rs  query.rs  query_agents.rs  query_crons.rs  query_crons_tests.rs  query_logs.rs  query_orphans.rs  query_projects.rs  query_queues.rs  query_status.rs  query_tests.rs  queues.rs  queues_tests.rs  suggest.rs  suggest_tests.rs  test_fixtures.rs  tmux.rs  workers.rs  workers_tests.rs
crates/daemon/src/protocol/: mod.rs  property_tests.rs  query.rs  request_tests.rs  status.rs  types.rs  types_tests.rs
crates/daemon/src/storage/: checkpoint.rs  checkpoint_tests.rs  migration.rs  migration_tests.rs  mod.rs  snapshot.rs  snapshot_tests.rs  wal.rs  wal_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: activity_logger.rs  agent_logger.rs  agent_logger_tests.rs  agent_setup.rs  agent_setup_tests.rs  breadcrumb.rs  breadcrumb_tests.rs  decision_builder.rs  decision_builder_tests.rs  error.rs  executor.rs  executor_tests.rs  job_logger.rs  job_logger_tests.rs  lib.rs  lifecycle.rs  log_paths.rs  log_paths_tests.rs  monitor.rs  monitor_tests.rs  pipeline_logger.rs  pipeline_logger_tests.rs  queue_logger.rs  queue_logger_tests.rs  scheduler.rs  scheduler_tests.rs  spawn.rs  spawn_tests.rs  steps.rs  steps_tests.rs  test_helpers.rs  usage_metrics.rs  usage_metrics_tests.rs  vars.rs  vars_tests.rs  workspace.rs  workspace_fs.rs  workspace_tests.rs
crates/engine/src/executor_tests/: agent.rs  core.rs  mod.rs  workspace.rs
crates/engine/src/monitor_tests/: agent_run.rs  job.rs  mod.rs
crates/engine/src/runtime/: agent.rs  agent_run.rs  gate.rs  job.rs  mod.rs  monitor.rs  monitor_tests.rs  pipeline.rs  signal.rs
crates/engine/src/runtime_tests/: crew.rs  cron.rs  cron_agent.rs  cron_concurrency.rs  directives.rs  errors.rs  idempotency.rs  job_create.rs  job_deleted.rs  mod.rs  monitoring.rs  notify.rs  on_dead.rs  resume.rs  sessions.rs  steps.rs  steps_cycles.rs  steps_lifecycle.rs  steps_locals.rs  timer_cleanup.rs  worker.rs  worker_concurrency.rs  worker_external.rs  worker_queue.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs  property_tests.rs  query.rs  request.rs  response.rs  response_tests.rs  status.rs  types.rs  types_tests.rs  wire.rs  wire_tests.rs
(+488 files in other folders)
