[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/daemon",
    "crates/runbook",
    "crates/shell",
    "crates/wire",
]

# Root package for workspace-level integration tests
[package]
name = "oj-specs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
assert_cmd.workspace = true
dirs.workspace = true
serial_test.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true
zstd.workspace = true

[[test]]
name = "specs"
path = "tests/specs.rs"

[workspace.dependencies]
async-trait = "0.1"
hcl-rs = "0.18"
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
indexmap = { version = "2", features = ["serde"] }
nanoid = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
parking_lot = "0.12"
toml = "0.8"
tracing = "0.1"
nix = { version = "0.29", default-features = false, features = ["signal", "term"] }
notify-rust = "4"
yare = "3"

# dev dependencies
assert_cmd = "2"
proptest = "1"
dirs = "5"
serial_test = "3"
similar-asserts = "1"
tempfile = "3"
zstd = "0.13"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
