[package]
name = "oj-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
test-support = []  # Enables FakeAdapter exports for other crates' tests

[dependencies]
oj-core = { path = "../core" }
oj-runbook = { path = "../runbook" }
async-trait.workspace = true
dirs = "5.0"
parking_lot.workspace = true
notify-rust.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
uuid.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[dev-dependencies]
serial_test.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
yare.workspace = true
