[package]
name = "oj"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core" }
oj-daemon = { path = "../daemon" }
oj-engine = { path = "../engine" }
oj-runbook = { path = "../runbook" }
anyhow = "1"
nix.workspace = true
clap = { version = "4", features = ["derive"] }
notify = "6.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
yare.workspace = true
