[package]
name = "oj-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
test-support = ["proptest"]  # Enables test builders, helpers, and proptest strategies for other crates' tests

[dependencies]
nanoid.workspace = true
parking_lot.workspace = true
proptest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
yare.workspace = true
