[package]
name = "oj-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core" }
oj-runbook = { path = "../runbook" }
oj-storage = { path = "../storage" }
oj-adapters = { path = "../adapters" }
async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
uuid.workspace = true

[dev-dependencies]
oj-adapters = { path = "../adapters", features = ["test-support"] }
oj-core = { path = "../core", features = ["test-support"] }
proptest.workspace = true
tempfile.workspace = true
yare.workspace = true
